# codeembed

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENCE  README.md  cli.py  codebase_embedder_config.json  codeembed.toml  codeprism.toml  codeprism_config.json  main.py  mcp_server.py  opencode.json  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  release.yml
scripts/: generate_init_files.py
src/: setup_logger.py  types.py
src/bootstrap/: services.py
src/codeembed/: __init__.py  cli.py  main.py  mcp_server.py  setup_logger.py
src/codeembed/bootstrap/: __init__.py  services.py
src/codeembed/config/: __init__.py  models.py
src/codeembed/cost_tracking/: __init__.py  llm_wrapper.py  models.py
src/codeembed/delta_computer/: __init__.py  delta_computer.py
src/codeembed/doc_embedder/: __init__.py  chunk_cache.py  doc_embedder.py  models.py
src/codeembed/doc_provider/: __init__.py  base.py  local_doc_provider.py  models.py
src/codeembed/doc_search_service/: __init__.py  doc_search_service.py
src/codeembed/doc_splitters/: __init__.py  base.py  factory.py  generic_splitter.py  models.py  python_splitter.py
src/codeembed/graph_db/: base.py  models.py  sqlite_adapter.py
src/codeembed/llm/: __init__.py  base.py  models.py  ollama_adapter.py  openai_adapter.py
src/codeembed/locks/: base.py  file_lock.py
src/codeembed/utils/: __init__.py  checksum_utils.py  string_utils.py
src/codeembed/vector_db/: __init__.py  base.py  chromadb_adapter.py  models.py
src/codeprism/: cli.py  main.py  mcp_server.py  setup_logger.py
src/codeprism/bootstrap/: services.py
src/codeprism/config/: models.py
src/codeprism/delta_computer/: delta_computer.py
src/codeprism/doc_embedder/: doc_embedder.py
src/codeprism/doc_provider/: base.py  local_doc_provider.py  models.py
src/codeprism/doc_search_service/: doc_search_service.py
src/codeprism/doc_splitters/: base.py  factory.py  python_splitter.py
src/codeprism/llm/: base.py  ollama_adapter.py
src/codeprism/vector_db/: base.py  chromadb_adapter.py  models.py
src/config/: models.py
src/core/splitter/: base.py  services.py  value_objects.py
src/delta_computer/: delta_computer.py
src/doc_embedder/: doc_embedder.py
src/doc_provider/: base.py  local_doc_provider.py  models.py
src/doc_search_service/: doc_search_service.py
src/llm/: ollama_adapter.py
src/models/: file_segment.py  splitted_file.py
src/splitters/: base.py  python_splitter.py
src/utils/: checksum_utils.py  string_utils.py
src/vector_db/: base.py  chromadb_adapter.py  models.py
tests/: test_chunk_cache.py  test_cost_tracking.py  test_delta_computer.py  test_file_lock.py  test_normalize_edge.py  test_openai_adapter.py  test_python_splitter.py  test_reranking.py  test_splitter.py  test_sqlite_graph_db.py
