[project]
name = "codeembed"
version = "0.1.0b2"
description = "Embeds your codebase and makes it available for quick LLM lookups via MCP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-identity>=1.25,<2",
    "chromadb>=1.5,<2",
    "mcp>=1.26,<2",
    "ollama>=0.6,<1",
    "openai>=2.33,<3",
    "pip-audit>=2.10.0",
    "pydantic>=2.13,<3",
]

[project.scripts]
codeembed = "codeembed.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "pytest==9.0.3",
    "ruff==0.15.12",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
